--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://krok-code.github.io/goit-react-hw-07-phonebook/",
+  "homepage": "https://krok-code.github.io/goit-react-hw-08-phonebook/",
   "dependencies": {
     "@ant-design/icons": "^5.3.0",
     "@emotion/react": "^11.11.3",
@@ -14,7 +14,10 @@
     "axios": "^1.6.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.4",
     "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.4",
     "redux": "^5.0.1",
