--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "formik": "^2.4.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.4",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
@@ -23,7 +25,8 @@
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "shortid": "^2.2.16",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "yup": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
